Added some expected outcomes

--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -359,9 +359,10 @@
    "metadata": {},
    "source": [
     "What we would like to find:\n",
-    "- Finding 1\n",
-    "- Finding 2\n",
-    "- Finding 3"
+    "- How does blood pressure impact the likelihood of diabetes?\n",
+    "- What is the relationship of BMI and diabetic standing?\n",
+    "- Finding 3\n",
+    "- Finding 4"
    ]
   },
   {
