--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -361,7 +361,7 @@
     "What we would like to find:\n",
     "- How does blood pressure impact the likelihood of diabetes?\n",
     "- What is the relationship of BMI and diabetic standing?\n",
-    "- Finding 3\n",
+    "- What is the relationship between Glucose and Age with an emphasis on their Diabetic Standing\n",
     "- Finding 4"
    ]
   },
