--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -361,8 +361,9 @@
     "What we would like to find:\n",
     "- How does blood pressure impact the likelihood of diabetes?\n",
     "- What is the relationship of BMI and diabetic standing?\n",
-    "- What is the relationship between Glucose and Age with an emphasis on their Diabetic Standing\n",
-    "- Finding 4"
+    "- What is the relationship between Glucose and Age with an emphasis on their Diabetic Standing?\n",
+    "- Finding 4\n",
+    "  "
    ]
   },
   {
